--- a/maskaudit.py.in
+++ b/maskaudit.py.in
@@ -11,7 +11,11 @@
 #
 # With -t, tabulate usage of defines to find unused ones.  Requires -c or -d.
 
-import sys, commands, glob, getopt
+import commands
+import getopt
+import glob
+import sys
+
 
 class SourceExtractor:
     def __init__(self, sourcefile, clientside):
