--- a/valgrind-audit.py.in
+++ b/valgrind-audit.py.in
@@ -12,9 +12,9 @@
 import gps.fake
 import sys
 
-debuglevel=1
+debuglevel = 1
 
-invocation="valgrind --tool=memcheck --gen-suppressions=yes --leak-check=yes --suppressions=valgrind-suppressions"
+invocation = "valgrind --tool=memcheck --gen-suppressions=yes --leak-check=yes --suppressions=valgrind-suppressions"
 test = gps.fake.TestSession(prefix=invocation, options="-D %d" % debuglevel)
 test.progress = sys.stderr.write
 
@@ -96,7 +96,7 @@ try:
 
     print "*** Test #4 complete.\n"
 finally:
-    test.cleanup();
+    test.cleanup()
 
 # The following sets edit modes for GNU EMACS
 # Local Variables:
